# moni

./: AGENTS.md  Cargo.toml  README.md
deploy/: com.feral.moni.plist  logs.sh  moni-run-with-cc-env.sh  remote-build-restart.sh  rollback.sh  status.sh
src/: app.rs  commands.rs  cron.rs  discord.rs  engine.rs  harness.rs  history.rs  lib.rs  main.rs  nats.rs  output.rs  queue.rs  registry.rs  runtime.rs  session.rs  store.rs  test_support.rs  voice.rs
tests/: main_cli.rs
