[package]
name = "moni"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-nats = "0.42"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
dirs-next = "2.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "test-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.17", features = ["serde", "v4"] }

[dev-dependencies]
futures = "0.3"
tempfile = "3.20"
